quick fix with z-index

--- a/src/components/Start-right.css
+++ b/src/components/Start-right.css
@@ -344,7 +344,7 @@ Textarea for starting prompt END
 .right-header-main {
   position: sticky;
   top: 1vh;
-  z-index: 10;
+  z-index: 1000000000000;
   background-color: var(--second-background);
   padding: 0.5vw 1vw;
   font-size: calc(var(--step-font-size, 1vw) * 1);
